fix(base-field): remove extra padding to fix autofill fields

--- a/src/ui/form-field.module.css
+++ b/src/ui/form-field.module.css
@@ -23,7 +23,6 @@
   border: 1px solid oklch(var(--rs-color-border-default));
   border-radius: var(--rs-border-radius-standart);
   background-color: oklch(var(--rs-fill-background));
-  padding: var(--rs-space-micro) 0;
   transition: transform, border-color var(--rs-timing);
 }
 
